fix(cart): fix the quantity issue